[package]
name = "dioxide"
version = "0.1.0"
edition = "2021"
description = "A linter for Golang that detects dead code, syntax errors, and more with auto-fix capabilities"
authors = ["kleeedolinux"]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
walkdir = "2.4.0"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
colored = "2.0.4"
tree-sitter = "0.20.10"
tree-sitter-go = "0.20.0"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.1"
rayon = "1.8.0"
toml = "0.8.8"
